k3s/matrix.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: matrix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: matrix
  replicas: 1
  template:
    metadata:
      labels:
        app: matrix
    spec:
      containers:
      - name: matrix
        image: matrixdotorg/synapse:v1.55.2
        ports:
        - containerPort: 8008
          name: http-web-svc
        volumeMounts:
        - mountPath: "/data"
          name: data
        livenessProbe:
          httpGet:
            path: /_matrix/static
            port: 8008
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: matrix-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-service
  namespace: matrix
spec:
  selector:
    app: matrix
  type: ClusterIP
  ports:
  - name: matrix-web-port
    protocol: TCP
    port: 8008
    targetPort: http-web-svc
